--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
+Preferences = "21216c6a-2e73-6563-6e65-726566657250"
 
 [compat]
 MKL_jll = "2021"
